--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:fr": "ng serve --configuration=fr",
+    "start:de": "ng serve --configuration=de",
     "build": "ng build",
+    "build:fr": "ng build --configuration=fr",
+    "build:de": "ng build --configuration=de",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "i18n:extract": "ng xi18n --output-path src/locale"
